move animation handling to prePaintScreen, avoid multiple hash lookups

BUG: 177985
BUG: 184859
catch windows closing during the animation


svn path=/trunk/KDE/kdebase/workspace/; revision=1054144